# pipecap

./: .gitignore  Cargo.toml  README.md  diag.py  index.d.ts  index.js  package-lock.json  package.json  test.sh
.github/workflows/: ci.yml  publish.yml
electron/: main.d.ts  main.js  preload.d.ts  preload.js  renderer.d.ts  renderer.js
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
scripts/: download-prebuilt.js
src/: audio.rs  capture.rs  lib.rs  portal.rs  pw_util.rs  shm.rs
src/audio/: app.rs  mix.rs  mod.rs  resolve.rs  system.rs  system_exclude.rs
