[package]
name = "pipecap"
version = "0.1.0"
edition = "2024"
description = "Native PipeWire screen capture for Electron — portal picker + video frames"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Node.js native addon
napi = { version = "2", features = ["async", "napi8"] }
napi-derive = "2"

# PipeWire client (git for PipeWire 1.6 compat)
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git" }
pipewire-sys = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git" }
libspa = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git" }

# xdg-desktop-portal (ScreenCast)
ashpd = { version = "0.10", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "sync", "time"] }

# Error handling
anyhow = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
