[package]
name = "pipecap"
version = "0.2.0"
edition = "2024"
description = "Native PipeWire audio capture for Electron — per-app or system audio"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Node.js native addon
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"

# PipeWire client
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git" }
pipewire-sys = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git" }
libspa = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git" }

# JSON parsing (pw-dump)
serde_json = "1"

# Error handling
anyhow = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
